add code improvements

--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
   </head>
   <body>
     <main class="container">
-      <div class="bg-one"></div>
-      <div class="bg-two"></div>
-      <div class="bg-three"></div>
-      <div class="bg-four"></div>
       <section class="card-container">
-        <figure class="card-container__img">
-          <img src="./images/illustration-hero.svg" alt="card-img">
-        </figure>
+        <img class="card-container__img" src="./images/illustration-hero.svg" alt="card-img">
         <div class="card-container__description">
           <h1>Order Summary</h1>
           <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
